[metadata]
name = moolah
version = 0.0.1
author = Marcello Barisonzi
author_email = author@example.com
description = short package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbarison/python_package_test
project_urls =
    Bug Tracker = https://github.com/mbarison/python_package_test/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
